--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@vscode/codicons": "^0.0.35"
+    "@vscode/codicons": "^0.0.35",
+    "@vscode/webview-ui-toolkit": "^1.4.0"
   }
 }
