--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
   },
   "dependencies": {
     "@vscode/codicons": "^0.0.35",
-    "@vscode/webview-ui-toolkit": "^1.4.0"
+    "@vscode/webview-ui-toolkit": "^1.4.0",
+    "htm": "^3.1.1",
+    "preact": "^10.19.3"
   }
 }
