--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "@vscode/codicons": "^0.0.35",
     "@vscode/webview-ui-toolkit": "^1.4.0",
     "htm": "^3.1.1",
-    "preact": "^10.19.3"
+    "preact": "^10.19.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
