--- a/src/webview/tsconfig.json
+++ b/src/webview/tsconfig.json
@@ -1,7 +1,5 @@
 {
 	"compilerOptions": {
-        "jsx": "react",
-        "jsxFactory": "h",
-		"jsxFragmentFactory": "Fragment",
+        "jsx": "react-jsx"
 	}
 }
